5.3.0 -> 5.4a1:
    - jbj: hkp: use rpmhkp methods for pubkey imports.
    - jbj: hkp: use rpmhkp methods for package signatures..
    - jbj: hkp: use rpmhkp methods for clear-signed run-time dependency probes.
    - jbj: hkp: use rpmhkpLoadSignature.
    - jbj: hkp: expose rpmhkpLoadSignature.
    - jbj: pgp: expose the pgpPkt_s internals.
    - jbj: hkp: test for RPMRC_OK when validating.
    - jbj: hkp: richer return codes from rpmhkpValidate.
    - jbj: hkp: expose more methods, add industrial strength debugging spewage.
    - jbj: hkp: eliminate pgpPrtPkts to load pubkey material.
    - jbj: hkp: refactor pubkey material from rpmts -> rpmhkp.
    - jbj: hkp: fix: unbreak package signatures (but creepy logic todo++).
    - jbj: hkp: pull the trailing "...=0x" out of _hkp_keyserver_query.
    - jbj: hkp: retrofit macro madness disablers for hkp:// lookups.
    - jbj: hkp: permit string lookups.
    - jbj: iob: increase max. buffer from 256Kb to 1Mb for pubkeys.
    - jbj: hkp: add a rpmhkp object to manage hkp:// pubkey lookup/validate.
    - jbj: digest: fix: don't count the trailing NUL for ascii digests.
    - jbj: gc: truncate DSA digests to 160bits.
    - jbj: bc: truncate DSA digests to 160bits.
    - jbj: bc: fix: eliminate static buffer overflow.
    - jbj: ssl: ensure RSA/DSA parameters are set.
    - jbj: hkp: expose pubky/signature parameter setters.
    - jbj: hkp: pick up RHEL6 pubkeys for testing.
    - jbj: hkp: permit 32-bit as well as 64-bit fingerprint quieries.
    - jbj: hkp: add a NULL sentinel to pgpGrabPkts packaet array.
    - jbk: hkp: add PGPSIGTYPE_KEY_BINDING handling. never seen one *shrug*.
    - jbj: hkp: expose pgpGrabPkts in loader maps.
    - jbj: hkp: permit fingerprints on public subkeys.
    - jbj: gcrypt: fix: convert hash as signed for RSA, unsigned for DSA.
    - jbj: add a negative pubkey lookup Bloom filter.
    - jbj: fix: save chroot value across embedded scriptlet execution.