@@ -1,4 +1,5 @@
 5.3.0 -> 5.4a1:
+    - jbj: hkp: lazily setup/teardown the global awol/crl Bloom filters.
     - jbj: hkp: use rpmhkp methods for pubkey imports.
     - jbj: hkp: use rpmhkp methods for package signatures..
     - jbj: hkp: use rpmhkp methods for clear-signed run-time dependency probes.
